--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
         "craft vimeo pro"
     ],
     "support": {
-        "docs": "???",
-        "issues": "???"
+        "docs": "https://github.com/No-Plans/craft-vimeo-pro",
+        "issues": "https://github.com/No-Plans/craft-vimeo-pro"
     },
     "license": "MIT",
     "authors": [
